5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1832_1658.log
== TEST (2019-06-13 18:44:22) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont(5, dtype=int)
for i in range(size(a)):
	if(a[i]=="CHN"):
		a[0]=a[0]+1
	if(a[i]=="JPN"):
		a[1]=a[1]+1
	if(a[i]=="KOR"):
		a[2]=a[2]+1
	if(a[i]=="MGL"):
		a[3]=a[3]+1
	if(a[i]=="THA"):
		a[4]=a[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:45:05) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont=zeros(5, dtype=int)
for i in range(size(a)):
	if(a[i]=="CHN"):
		a[0]=a[0]+1
	if(a[i]=="JPN"):
		a[1]=a[1]+1
	if(a[i]=="KOR"):
		a[2]=a[2]+1
	if(a[i]=="MGL"):
		a[3]=a[3]+1
	if(a[i]=="THA"):
		a[4]=a[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:46:19) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont=zeros(5, dtype=int)
for i in range(size(a)):
	if(a[i]=="CHN"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:48:21) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont=zeros(5, dtype=int)
for i in range(size(a)):
	if(a[i]==1):
		cont[0]=cont[0]+1
	if(a[i]==2):
		cont[1]=cont[1]+1
	if(a[i]==3):
		cont[2]=cont[2]+1
	if(a[i]==4):
		cont[3]=cont[3]+1
	if(a[i]==5):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:48:48) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont=(5, dtype=int)
for i in range(size(a)):
	if(a[i]==1):
		cont[0]=cont[0]+1
	if(a[i]==2):
		cont[1]=cont[1]+1
	if(a[i]==3):
		cont[2]=cont[2]+1
	if(a[i]==4):
		cont[3]=cont[3]+1
	if(a[i]==5):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
File "XXXX", line 4
    cont=(5, dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:49:40) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont=two(5, dtype=int)
for i in range(size(a)):
	if(a[i]==1):
		cont[0]=cont[0]+1
	if(a[i]==2):
		cont[1]=cont[1]+1
	if(a[i]==3):
		cont[2]=cont[2]+1
	if(a[i]==4):
		cont[3]=cont[3]+1
	if(a[i]==5):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:50:05) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont=zeros(5, dtype=int)
for i in range(size(a)):
	if(a[i]==1):
		cont[0]=cont[0]+1
	if(a[i]==2):
		cont[1]=cont[1]+1
	if(a[i]==3):
		cont[2]=cont[2]+1
	if(a[i]==4):
		cont[3]=cont[3]+1
	if(a[i]==5):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:50:38) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont=zeros(5, dtype=int)
for i in range(size(a)):
	if(a[i]==0):
		cont[0]=cont[0]+1
	if(a[i]==1):
		cont[1]=cont[1]+1
	if(a[i]==2):
		cont[2]=cont[2]+1
	if(a[i]==3):
		cont[3]=cont[3]+1
	if(a[i]==4):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:51:30) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont=0
cont=zeros(5, dtype=int)
for i in range(size(a)):
	if(a[i]==0):
		cont[0]=cont[0]+1
	if(a[i]==1):
		cont[1]=cont[1]+1
	if(a[i]==2):
		cont[2]=cont[2]+1
	if(a[i]==3):
		cont[3]=cont[3]+1
	if(a[i]==4):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:56:59) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont=0
cont=zeros(5, dtype=int)
for i in range(size(a)):
	if(a[i]=="CHN"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:57:18) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont=0
cont=zeros(5, dtype=int)
for i in range(size(a)):
	if(a[i]=="CHN"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:57:28) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
print(a)
cont=0
cont=zeros(5, dtype=int)
for i in range(size(a)):
	if(a[i]=="CHN"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:58:14) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5, dtype=int)
for i in range(size(a)):
	if(a[i]=="CHN"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:59:53) 
-- CODE:
from numpy import*
cont=zeros(5,dtype=int)
a=input("digite os paises: ").upper().split(',')
for i in range(size(a)):
	if(a[i]=="CHN"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:02:48) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CHN"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:02:55) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CHN"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
	

-- EXECUTION TIME:
0.904607
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
4
[4 4 0 1 1]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
8
[3 7 3 8 3]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
4
[3 0 4 2 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
